# multi_agent_

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/agents/: __init__.py  base.py  openai_agent.py  router_agent.py
app/chain/: __init__.py  base.py  graph.py  history_agent.py  kri_selector.py  math_agent.py  presenter_agent.py
app/core/infra/: Dockerfile  docker-compose.yml  docker-stack.yml  logging.py
app/core/settings/: __init__.py  config.py
app/database/: __init__.py  mongo.py  session.py
app/model/: __init__.py  example.py
app/routers/v1/: __init__.py  agent.py  examples.py  health.py
app/schema/: __init__.py  agent.py  example.py
app/services/: example_service.py
app/tools/: __init__.py  calculator.py  math_helpers.py  symbolic.py
app/utility/: __init__.py  catalog.py  helpers.py  history.py  llm.py
docs/data-catalog/: credit-exposure.md  customer-counterparty.md  loan-portfolio.md  payments-transactions.md  regulatory-events.md  sales-orders.md
docs/walkthrough/: 00-index.md  01-schema-agent.md  02-utility-llm.md  03-utility-history.md  04-tools-calculator.md  05-tools-math_helpers.md  06-tools-symbolic.md  07-tools-init.md  08-chain-base.md  09-chain-math_agent.md  10-chain-history_agent.md  11-chain-presenter_agent.md  12-agents-base.md  13-agents-openai_agent.md
