[project]
name = "multi-agent"
version = "0.1.0"
description = "A FastAPI multi-agent application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "openai>=1.50",
    "sympy>=1.14.0",
    "langchain-ollama>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
